<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
<groupId>fr.inria.gforge.spirals</groupId> <artifactId>nopol</artifactId>
    <version>0.3-SNAPSHOT</version>
    <name>Nopol</name>
    <description>Java Program Repair via Conditional Expression Replacement</description>
    <inceptionYear>2013</inceptionYear>

    <licenses>
        <license>
            <name>CeCILL-C</name>
            <comments>French equivalent to LGPL</comments>
            <url>http://www.cecill.info/licences/Licence_CeCILL-C_V1-en.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>Inria</name>
        <url>http://www.inria.fr</url>
    </organization>

    <prerequisites>
        <maven>3.0</maven>
    </prerequisites>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <default.encoding>UTF-8</default.encoding>
        <slf4j.version>1.7.5</slf4j.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <java.src.version>1.8</java.src.version>
        <java.test.version>1.8</java.test.version>

        <javacc-maven-plugin.version>2.6</javacc-maven-plugin.version>
        <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
        <maven-compiler-plugin.version>3.0</maven-compiler-plugin.version>
        <maven-install-plugin.version>2.4</maven-install-plugin.version>
        <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
        <maven-release-plugin.version>2.5.1</maven-release-plugin.version>
        <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
        <maven-jacoco-plugin.version>0.8.7</maven-jacoco-plugin.version>
        <maven-coveralls-plugin.version>4.0.0</maven-coveralls-plugin.version>

        <github.global.server>github</github.global.server>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.github.spoonlabs</groupId>
            <artifactId>flacoco</artifactId>
            <version>1.0.5</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.9.9-RC1</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.13</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>2.0.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>gov.nasa.jpf</groupId>
            <artifactId>jpf</artifactId>
            <version>1154</version>
            <optional>true</optional>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>gov.nasa.jpf</groupId>
            <artifactId>jpf-symbc</artifactId>
            <version>576</version>
            <optional>true</optional>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.microsoft.z3</groupId>
            <artifactId>z3</artifactId>
            <version>0.0.1</version>
        </dependency>
        <dependency>
            <groupId>fr.inria.gforge.spoon</groupId>
            <artifactId>spoon-core</artifactId>
            <version>9.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.smtlib</groupId>
            <artifactId>smtlib</artifactId>
            <version>0.9.7.1</version>
        </dependency>
        <dependency>
            <groupId>com.gzoltar</groupId>
            <artifactId>gzoltar</artifactId>
            <version>0.1.1</version>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.3</version>
        </dependency>

        <dependency>
            <groupId>fil.iagl.cocospoon</groupId>
            <artifactId>CocoSpoon</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.cloudbees</groupId>
            <artifactId>diff4j</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>
    </dependencies>

    <dependencyManagement>

        <dependencies>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>32.0.0-jre</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>jul-to-slf4j</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <encoding>${default.encoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>${default.encoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>fr.inria.lille.repair.Main</mainClass>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <!--<plugin>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.0.4</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[1.7.0-1,1.7.0-200)</version>
                                </requireJavaVersion>
                                <requireUpperBoundDeps/>
                                <dependencyConvergence/>
                                <requirePluginVersions/>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>-->

            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <id>create-my-bundle</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <archive>
                                <manifest>
                                    <mainClass>fr.inria.lille.repair.Main</mainClass>
                                </manifest>
                            </archive>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${maven-jacoco-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.14.1</version>
                <configuration>
<!--                     java.lang.RuntimeException: java.lang.reflect.InaccessibleObjectException: Unable to make abstract boolean com.sun.tools.jdi.ReferenceTypeImpl.isAssignableTo(com.sun.jdi.ReferenceType) accessible: module jdk.jdi does not "opens com.sun.tools.jdi" to unnamed module -->
<!--                     java.lang.IllegalAccessError: class fr.inria.lille.repair.expression.value.Value$1 (in unnamed module @0x5577140b) cannot access class sun.reflect.generics.reflectiveObjects.NotImplementedException (in module java.base) because module java.base does not export sun.reflect.generics.reflectiveObjects to unnamed module @0x5577140b -->
                    
                    <argLine>-Xms2048m -Xmx2048m -cp ${java.home.openjdk11}/jmods/jdk.jdi.jmod --add-opens jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED --add-opens java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.1</version>
            </plugin>
            <plugin>
                <groupId>com.github.github</groupId>
                <artifactId>site-maven-plugin</artifactId>
                <version>0.12</version>
                <configuration>
                    <merge>true</merge>
                    <message>Maven artifacts for ${project.artifactId} ${project.version}</message>
                    <noJekyll>true</noJekyll>
                    <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
                    <branch>refs/heads/master</branch>
                    <includes>
                        <include>**/*</include>
                    </includes>
                    <repositoryName>maven-repository</repositoryName>
                    <repositoryOwner>tdurieux</repositoryOwner>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>site</goal>
                        </goals>
                        <phase>deploy</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <!--   required for gov.nasa.jpf:jpf:jar:1154, gov.nasa.jpf:jpf-symbc:jar:576, com.microsoft.z3:z3:jar:0.0.1, org.smtlib:smtlib:jar:0.9.7.1, com.gzoltar:gzoltar:jar:0.1.1:  -->
            <id>sachaproject.gforge.inria.fr-release</id>
            <name>Maven Repository for Spoon Release</name>
            <url>https://files.inria.fr/sachaproject/htdocs/repositories/releases/</url>
            <snapshots/>
        </repository>
	
        <repository>
            <id>tdurieux.github.io/maven-repository/snapshots/</id>
            <name>tdurieux.github.io maven-repository</name>
            <url>https://tdurieux.github.io/maven-repository/snapshots/</url>
        </repository>
       <repository>
            <id>snapshots-repo</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases><enabled>false</enabled></releases>
            <snapshots><enabled>true</enabled></snapshots>
       </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>internal-repo</id>
            <name>Temporary Staging Repository</name>
            <url>file://${project.build.directory}/mvn-repo/releases</url>
        </repository>
        <snapshotRepository>
            <id>internal-snapshot-repo</id>
            <name>Temporary Staging Snapshot Repository</name>
            <url>file://${project.build.directory}/mvn-repo/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
